--- a/css/styles.css
+++ b/css/styles.css
@@ -2,4 +2,43 @@
 	background-color: red; 
 }	*/
 
-/*Comment goes here*/
+body {
+	padding-top: 70px; /* pading to push content ie H1 onwards go below nav bar */
+}
+
+nav {  /* fixed pos nav */
+	background-color: #333333;
+	color: white;
+	position: fixed; /* Make nav bar stick to top*/
+	right: 0; /* Make nav stretch to right side of screen ie 0 pix from right */
+	left: 0; /* Make nav stretch to left side of screen ie 0 pix from left */
+	top: 0; /* Make nav stretch to top of browser of screen ie 0 pix from top */
+
+}
+
+nav img:first-child {
+	float: left;
+}
+
+nav li {
+	display: inline-block;
+}
+
+nav ul {
+	float: left;
+}
+
+nav img:last-child {
+	float:right;
+}
+
+nav:after {   /* Clearfix */
+  	content: "";
+	display: block;
+	clear: both;
+}
+
+
+
+
+
